# todoistScheduler

./: .breakpoints  .gitignore  README.md  WARP.md  main.py  pyproject.toml  scheduler.py  tests.py  todoist-reset-dates.py
.github/workflows/: nightly.yml
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
src/todoistScheduler/: cli.py  config.py  main.py  reminders.py  reschedule.py  scheduler.py
tests/: conftest.py  test_basic.py  test_cli.py  test_reminders.py  test_reschedule.py
