[tool.poetry]
name = "todoistScheduler"
version = "0.1.0"
description = ""
authors = ["Kevin Panko <pankok@gmail.com>"]
packages = [{include = "todoistScheduler", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
todoist-api-python = "^3.2.1"
todoist = "^0.0.1"
tzdata = "^2024.1"
python-dotenv = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.scripts]
todoist-reschedule = "todoistScheduler.cli:main"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"